# mcp-experiment-01

./: README.md  config.yaml  pyproject.toml
src/mcp_server/: config.py  main.py  server.py
src/mcp_server/parsers/: __init__.py  docx_parser.py  pdf_parser.py  pptx_parser.py  text_parser.py  xlsx_parser.py
src/mcp_server/security/: path_validator.py  pii_detector.py
src/mcp_server/tools/: document_reader.py  web_browser.py
